# receipt-processor-challenge

./: .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pyproject.toml
config/: rules.yaml
deployment/rest_server/: Dockerfile
lib/core/: logger.py  receipt_processor.py  redis_connector.py  text_processor.py
lib/rest_server/: context.py  http_error.py  init_rules.py  middlewares.py
rest_server/: import_routes.py  main.py
rest_server/api/config/: __init__.py  get_rules.py  models.py  update_rules.py
rest_server/api/receipts/: __init__.py  models.py  points.py  process.py  utils.py
